--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="me">
                 <div class="portrait"></div>
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>请输入图片URL地址：</h3>
+                    <h3>请输入图片 URL 地址：</h3>
                     <br/>
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
@@ -49,7 +49,7 @@
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">202283460055@nuist.edu.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">EvonexusX.github.io/Personal-Page</span></li>
+                        <label class="left-label">个人主页</label><span class="label-value">evonexusx.github.io/Personal-Page</span></li>
                     <li>
                         <label class="left-label">Github</label><span class="label-value">github.com/EvonexusX</span></li>
                 </ul>
@@ -59,35 +59,35 @@
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">Python</label>
+                        <label class="left-label">算法竞赛</label>
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">html/css</label>
+                        <label class="left-label">演化计算</label>
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">Javascript</label>
+                        <label class="left-label">大模型推理</label>
                         <progress value="60" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">机器学习</label>
+                        <label class="left-label">智能体决策</label>
                         <progress value="60" max="100"></progress>
                     </li>
                 </ul>
             </div>
             <div class="stack info-unit">
-                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">编程语言</span></h2>
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span></li>
+                        <label class="left-label">算法</label><span class="label-value">Python</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
+                        <label class="left-label">科研</label><span class="label-value">Python, Matlab</span></li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
+                        <label class="left-label">其它</label><span class="label-value">C/C++, HTML, CSS, Javascript, go</span></li>
                     </li>
                 </ul>
             </div>
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="remodal remodal-img" data-remodal-id="weixin-modal">
-                <h3>请输入图片URL地址：</h3>
+                <h3>请输入图片 URL 地址：</h3>
                 <br/>
                 <input type="text" id="weixin-url">
                 <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
@@ -113,10 +113,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京邮电大学 - 网络工程专业（本科）2012-2017</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
+                        <h3>南京信息工程大学 - 人工智专业（本科）2012-2017</h3>
                     </li>
                 </ul>
             </div>
@@ -143,7 +140,7 @@
                     <li>
                         <h3>基于 Qt 5 的文本编辑器</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             <br/>
                         </p>
                     </li>
@@ -174,19 +171,19 @@
                     <li>
                         <h3>小学生作文二等奖</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                         </p>
                     </li> 
                     <li>
                         <h3>曾获统一冰红茶“再来一瓶”奖</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                         </p>
                     </li> 
                     <li>
                         <h3>这一行也是为了凑版面</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
                         </p>
                     </li>                     
             </div>
